[gd_scene load_steps=15 format=3 uid="uid://3fp08v0qk70r"]

[ext_resource type="Script" path="res://scripts/city_menu_bar.gd" id="1_86pho"]
[ext_resource type="Theme" uid="uid://5qu464eye42a" path="res://resources/themes/city_menu_bar_theme.tres" id="2_se8nl"]
[ext_resource type="Texture2D" uid="uid://bsjx75srq732h" path="res://img/ui/TitleBox_64x16.png" id="3_11rt3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r1rpv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j6hwi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ig78w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ka6ii"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r3vfc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hlrgk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7bjx0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_udl0q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wnrv3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jr8iu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_loqu2"]

[node name="City_Menu" type="CanvasLayer"]
layer = 2
script = ExtResource("1_86pho")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = -199.0
offset_right = 77.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
theme = ExtResource("2_se8nl")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MenuTitle" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TitleBox" type="TextureRect" parent="Panel/VBoxContainer/MenuTitle"]
layout_mode = 2
texture = ExtResource("3_11rt3")
expand_mode = 5

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer/MenuTitle"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 36
text = "   City name   "
horizontal_alignment = 1
vertical_alignment = 1

[node name="info" type="MenuButton" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Information"
alignment = 0
item_count = 8
popup/item_0/text = "Name: "
popup/item_1/text = "City radius: "
popup/item_1/id = 1
popup/item_2/text = "HP: "
popup/item_2/id = 2
popup/item_3/text = "Gold Production: "
popup/item_3/id = 3
popup/item_4/text = "Food production: "
popup/item_4/id = 4
popup/item_5/text = "Wood production: "
popup/item_5/id = 5
popup/item_6/text = "Stone production: "
popup/item_6/id = 6
popup/item_7/text = "Steel production: "
popup/item_7/id = 7

[node name="recruit" type="MenuButton" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Recruit"
item_count = 3
popup/item_0/text = "Infantry"
popup/item_1/text = "Knights"
popup/item_1/id = 1
popup/item_2/text = "Dragons"
popup/item_2/id = 2

[node name="build" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_r1rpv")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_j6hwi")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ig78w")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_ka6ii")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_r3vfc")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_hlrgk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7bjx0")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_udl0q")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wnrv3")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_jr8iu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_loqu2")
text = "Build"

[connection signal="pressed" from="Panel/VBoxContainer/build" to="." method="_on_build_pressed"]
